apps/librespeed/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: librespeed-svc
  labels:
    app.kubernetes.io/instance: librespeed
    app.kubernetes.io/name: librespeed
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/instance: librespeed
    app.kubernetes.io/name: librespeed
