apps/librespeed/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/ssl-passthrough: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: 256M
  labels:
    app.kubernetes.io/instance: librespeed
    app.kubernetes.io/name: librespeed
  name: librespeed
spec:
  rules:
    - host: speed.ivanchenko.io
      http:
        paths:
          - backend:
              service:
                name: librespeed-svc
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - speed.ivanchenko.io
      secretName: librespeed-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx-home
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/ssl-passthrough: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: 256M
  labels:
    app.kubernetes.io/instance: librespeed-home
    app.kubernetes.io/name: librespeed-home
  name: librespeed-home
spec:
  rules:
    - host: speed.ivanchenko.io
      http:
        paths:
          - backend:
              service:
                name: librespeed-svc
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - speed.ivanchenko.io
      secretName: librespeed-tls
